--- a/IconButtonSample/IconButtonSample/Controls/IconButton.xaml
+++ b/IconButtonSample/IconButtonSample/Controls/IconButton.xaml
@@ -3,5 +3,27 @@
     x:Class="IconButtonSample.Controls.IconButton"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
-    <Image x:Name="imgIcon" BindingContextChanged="imgIcon_BindingContextChanged" />
+    <Grid
+        x:Name="grdIconButton"
+        ColumnSpacing="0"
+        HorizontalOptions="CenterAndExpand"
+        RowSpacing="0"
+        VerticalOptions="CenterAndExpand">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Image
+            x:Name="imgIcon"
+            Aspect="AspectFit"
+            BindingContextChanged="imgIcon_BindingContextChanged" />
+        <Label
+            x:Name="lblDescription"
+            HorizontalOptions="CenterAndExpand"
+            VerticalOptions="CenterAndExpand" />
+    </Grid>
 </ContentView>
